add updatePackage (description) using JsonNullableModule and HTTP-to-DB test with RestAssured
